@@ -173,6 +173,8 @@ public:
 	static void RunUnitTests(int& nSucceeded, int& nFailures);
 
 protected:
+	virtual bool CheckVariableWrite(StateVariable& var);
+
 	virtual bool VirtualToPhysical(uint64_t vaddr, uint64_t& paddr,
 	    bool& writable);
 
